@@ -85,6 +85,7 @@
     <Compile Include="Code\SerializableData.cs" />
     <Compile Include="Code\TranslationFramework\TranslationFramework.cs" />
     <Compile Include="Code\Mod.cs" />
+    <Compile Include="Code\Utils\UIControls.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Code\TranslationFramework\TranslationXML.cs" />
   </ItemGroup>
